--- a/sets/simple.yaml
+++ b/sets/simple.yaml
@@ -3,6 +3,7 @@ name: simple
 mutation_sets:
   - [ nothing ] # => word
   - [ reverse ] # => drow
+  - [ uppercase_all ] # => WORD
   - [ "append:{0-9}" ] # => word1, word2, word3
   - [ "2 append:{0-9}" ] # => word11, word22, word33
   - [ "replace:o:0", "replace:a:4", "replace:e:3" ] # => w0rd, h3ll0
