--- a/sets/simple.yaml
+++ b/sets/simple.yaml
@@ -3,6 +3,8 @@ name: simple
 mutation_sets:
   - [ nothing ] # => word
   - [ reverse ] # => drow
+  - [ remove_last_letter ] # => wor
+  - [ remove_first_letter ] # => ord
   - [ uppercase_all ] # => WORD
   - [ "append:{0-9}" ] # => word1, word2, word3
   - [ "2 append:{0-9}" ] # => word11, word22, word33
