--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.2.16", features = ["derive"] }
 colored = "2.0.0"
+regex = "1.6.0"
+reqwest = "0.11.11"
+tokio = { version = "1.20.1", features = ["full"] }
 yaml-rust = "0.4.5"
