--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,10 @@ regex = "1.6.0"
 reqwest = "0.11.11"
 tokio = { version = "1.20.1", features = ["full"] }
 yaml-rust = "0.4.5"
+
+[profile.release]
+opt-level = 'z'     # Optimize for size.
+lto = true          # Enable Link Time Optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations.
+panic = 'abort'     # Abort on panic
+strip = true        # Strip symbols from binary*
