--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ ureq = "2.5.0"
 yaml-rust = "0.4.5"
 
 [profile.release]
-opt-level = 'z'     # Optimize for size.
-lto = true          # Enable Link Time Optimization
-codegen-units = 1   # Reduce number of codegen units to increase optimizations.
-panic = 'abort'     # Abort on panic
+# opt-level = 'z'     # Optimize for size.
+# lto = true          # Enable Link Time Optimization
+# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
+# panic = 'abort'     # Abort on panic
 strip = "symbols"   # Strip symbols from binary
