--- a/sets/emails.yml
+++ b/sets/emails.yml
@@ -5,3 +5,4 @@ mutation_sets:
   - [ "append:@gmail.com" ]
   - [ "append:@outlook.com" ]
   - [ "append:@hotmail.com" ]
+  - [ "append:@protonmail.com" ]
