--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.2.16", features = ["derive"] }
 colored = "2.0.0"
+csv = "1.1.6"
 regex = "1.6.0"
 ureq = "2.5.0"
 # reqwest = "0.11.11"
