--- a/sets/formatting/basic_usernames.yml
+++ b/sets/formatting/basic_usernames.yml
@@ -7,5 +7,7 @@ fields:
 formatting_sets:
   - [ "{f_name}_{l_name}" ]
   - [ "{l_name}{f_name}" ]
-  - [ ["{f_name}", 1st_letter], "_{l_name}" ]
-  - [ ["{f_name}", 1st_letter], "{l_name}" ]
+  - [ "{f_name}.{l_name}" ]
+  - [ [ "{f_name}", 1st_letter ], "_{l_name}" ]
+  - [ [ "{f_name}", 1st_letter ], ".{l_name}" ]
+  - [ [ "{f_name}", 1st_letter ], "{l_name}" ]
