--- a/sets/simple_passwords.yml
+++ b/sets/simple_passwords.yml
@@ -52,5 +52,5 @@ mutation_sets:
       "replace:o:0", 
       "replace:a:4", 
       "replace:e:3", 
-      "replace:i:1", 
+      "replace:i:1"
     ] # => w0rd, h3ll0
