yaml: remove , from simple_passwords.yml that was causing parsing issues

--- a/sets/simple_passwords.yml
+++ b/sets/simple_passwords.yml
@@ -17,35 +17,35 @@ mutation_sets:
   - [ "2 append:{0-9}" ] # => word11, word22, word33
   - [ "append:{0-9}" ] # => word1, word2, word3
   
-  - [ "append:1997" ],
-  - [ "append:1998" ],
-  - [ "append:1999" ],
-  - [ "append:2000" ],
-  - [ "append:2001" ],
-  - [ "append:2002" ],
-  - [ "append:2003" ],
-  - [ "append:2004" ],
-  - [ "append:2005" ],
-  - [ "append:2006" ],
-  - [ "append:2007" ],
-  - [ "append:2008" ],
-  - [ "append:2009" ],
-  - [ "append:2010" ],
-  - [ "append:2011" ],
-  - [ "append:2012" ],
-  - [ "append:2013" ],
-  - [ "append:2014" ],
-  - [ "append:2015" ],
-  - [ "append:2016" ],
-  - [ "append:2017" ],
-  - [ "append:2018" ],
-  - [ "append:2019" ],
-  - [ "append:2020" ],
-  - [ "append:2021" ],
-  - [ "append:2022" ],
-  - [ "append:2023" ],
-  - [ "append:2024" ],
-  - [ "append:2025" ],
+  - [ "append:1997" ]
+  - [ "append:1998" ]
+  - [ "append:1999" ]
+  - [ "append:2000" ]
+  - [ "append:2001" ]
+  - [ "append:2002" ]
+  - [ "append:2003" ]
+  - [ "append:2004" ]
+  - [ "append:2005" ]
+  - [ "append:2006" ]
+  - [ "append:2007" ]
+  - [ "append:2008" ]
+  - [ "append:2009" ]
+  - [ "append:2010" ]
+  - [ "append:2011" ]
+  - [ "append:2012" ]
+  - [ "append:2013" ]
+  - [ "append:2014" ]
+  - [ "append:2015" ]
+  - [ "append:2016" ]
+  - [ "append:2017" ]
+  - [ "append:2018" ]
+  - [ "append:2019" ]
+  - [ "append:2020" ]
+  - [ "append:2021" ]
+  - [ "append:2022" ]
+  - [ "append:2023" ]
+  - [ "append:2024" ]
+  - [ "append:2025" ]
 
   # leet
   - [ 
