--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ureq = "2.5.0"
 # reqwest = "0.11.11"
 # tokio = { version = "1.20.1", features = ["full"] }
 yaml-rust = "0.4.5"
+scraper = "0.14.0"
 
 [profile.release]
 # opt-level = 'z'     # Optimize for size.
