ignores first but not second script tag

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ ureq = "2.5.0"
 # tokio = { version = "1.20.1", features = ["full"] }
 yaml-rust = "0.4.5"
 scraper = "0.14.0"
+markup5ever = "0.11.0"
 
 [profile.release]
 # opt-level = 'z'     # Optimize for size.
